tests/fail/UnsignedShiftRightAssign.java
package fail;

import java.lang.System;

public class UnsignedShiftRightAssign {
    public static void main(String[] args){
        int x = 0;
        System.out.println(x >>>= 'a');
    }
}